--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "axios": "0.21.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-floating-button": "^1.1.1",
     "react-router-dom": "5.3.0",
     "react-scripts": "4.0.3",
     "react-use-localstorage": "^3.5.3",
